--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
+    "material-icons": "^1.2.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.4",
